# CXRClassifier

./: .gitignore  CMakeLists.txt  README.md
inc/: Colors.hpp
src/: main.cpp
training/: tensorflow_model_training.py
